--- a/E-wasteManagement/src/main/resources/application.properties
+++ b/E-wasteManagement/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Project-e-waste
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/db
+server.port=8081
+spring.datasource.url=jdbc:mysql://localhost:3306/ewaste_management
 spring.datasource.username=root
 spring.datasource.password=Anka@123
 
