--- a/E-wasteManagement/pom.xml
+++ b/E-wasteManagement/pom.xml
@@ -72,6 +72,20 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependencies>
+	    <dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-java</artifactId>
+		<version>4.8.0</version>
+	    </dependency>
+	
+	    <dependency>
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>7.7.1</version>
+		<scope>test</scope>
+	    </dependency>
+</dependencies>
 	</dependencies>
 
 	<build>
