--- a/E-wasteManagement/pom.xml
+++ b/E-wasteManagement/pom.xml
@@ -29,13 +29,12 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
-	<dependencies>
+<dependencies>
 	<dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-security</artifactId>
-</dependency>
-
-		<dependency>
+		</dependency>
+            <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -55,6 +54,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
@@ -72,7 +72,6 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependencies>
 	    <dependency>
 		<groupId>org.seleniumhq.selenium</groupId>
 		<artifactId>selenium-java</artifactId>
@@ -86,7 +85,6 @@
 		<scope>test</scope>
 	    </dependency>
 </dependencies>
-	</dependencies>
 
 	<build>
 		<plugins>
