--- a/E-wasteManagement/pom.xml
+++ b/E-wasteManagement/pom.xml
@@ -58,6 +58,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.7.0</version> <!-- Use the latest version -->
+</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
